--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-web')
-//	runtime('com.h2database:h2')
+	runtime('com.h2database:h2')
 	compile("org.springframework.boot:spring-boot-starter-security")
-	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+//	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
