--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.data.rest.base-path=/rest
 spring.jackson.serialization.INDENT_OUTPUT=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/salvodb
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/salvodb
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=validate
